Fixed z-index property in navigation menu

--- a/src/app/modules/finance/finance.component.scss
+++ b/src/app/modules/finance/finance.component.scss
@@ -4,7 +4,7 @@
   background: #232323;
   color: #cdcdcd;
   padding: 20px;
-  z-index: 1001;
+  z-index: 999;
   -webkit-user-select: none;
   user-select: none;
   box-sizing: border-box;
